--- a/AI_CA1.ipynb
+++ b/AI_CA1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61346760",
+   "id": "6eb25ce8",
    "metadata": {},
    "source": [
     "In this project, the aim is to solve a predefined problem using various search algorithms and compare their qualities. BFS, IDS and A* are the algorithms used for this problem."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d36be6b",
+   "id": "9b5d0878",
    "metadata": {},
    "source": [
     "## Problem Description"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ae8fe28",
+   "id": "bb5d0df7",
    "metadata": {},
    "source": [
     "TBA"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f87476",
+   "id": "3dddb706",
    "metadata": {},
    "source": [
     "## Modeling"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ec78af",
+   "id": "0f2a0c66",
    "metadata": {},
    "source": [
     "At first, the problem should be modeled as a graph so that the search algorithms can be applied to it in future steps. Each node representes one ditinct state of the map. Bellow, the components of the model is explained:\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bad0514",
+   "id": "bd650ab3",
    "metadata": {},
    "source": [
     "### Model Implementation"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "296897a8",
+   "id": "443fb19e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5952cfd2",
+   "id": "b5a67168",
    "metadata": {},
    "source": [
     " - <b>Initiat State:</b>"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f84996d6",
+   "id": "ae0600fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fe468f2",
+   "id": "88bbfa27",
    "metadata": {},
    "source": [
     " - <b>Actions:</b>"
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "60190094",
+   "execution_count": 95,
+   "id": "2ad1ff73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +137,13 @@
     "DOWN=(-1,0)\n",
     "RIGHT=(0,1)\n",
     "LEFT=(0,-1)\n",
-    "ACTIONS=[UP,DOWN,LEFT,RIGHT]"
+    "ACTIONS=[UP,DOWN,LEFT,RIGHT]\n",
+    "ACT_DICT={UP:\"U\",DOWN:\"D\",RIGHT:\"R\",LEFT:\"L\"}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a61475f0",
+   "id": "83309560",
    "metadata": {},
    "source": [
     " - <b>Transition Model:</b>"
@@ -150,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "44acb25f",
+   "execution_count": 73,
+   "id": "abd2db32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
     "        if(current_state[future_location]==POTION):\n",
     "            current_state[\"potion_count\"]-=1;\n",
     "        elif(current_state[future_location]==PILL):\n",
-    "            current_state[\"ploc\"].append((0,0))\n",
+    "            current_state[\"ploc\"].append((current_state[\"row\"]-1,0))\n",
     "        elif(current_state[future_location]==OBSTACLE):\n",
     "            return 0\n",
     "    elif(not_in_range(future_location,(current_state[\"row\"],current_state[\"col\"]))):\n",
@@ -181,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2c85ecbe",
+   "execution_count": 5,
+   "id": "65845ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,30 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8add44cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "{'row': 4, 'col': 4, 'potion_count': 2, 'ploc': [(0, 0)], (0, 2): 'M', (2, 0): 'M', (0, 1): 'D', (1, 2): 'O'} {'col': 4, 'potion_count': 2, 'ploc': [(0, 0)], (0, 2): 'M', (2, 0): 'M', (0, 1): 'D', (1, 2): 'O'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "d=c.copy()\n",
-    "del d[\"row\"]\n",
-    "print(c==d)\n",
-    "print(c,d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "567c647e",
+   "execution_count": 7,
+   "id": "b445ffca",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ad994f",
+   "id": "bd69140f",
    "metadata": {},
    "source": [
     "# BFS"
@@ -253,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef417e14",
+   "id": "1988be04",
    "metadata": {},
    "source": [
     "Explainations TBA"
@@ -261,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6da95ed7",
+   "execution_count": 96,
+   "id": "d8ddf52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,24 +249,29 @@
     "    i=0;\n",
     "    frontier_queue=[]\n",
     "    visited_states=[]\n",
-    "    order={}\n",
     "    frontier_queue.append(read_initial_state(file_address))\n",
+    "    visited_states.append(cp.deepcopy(frontier_queue[0]))\n",
     "    frontier_queue[0][\"order\"]=\"\"\n",
     "    while(frontier_queue):\n",
-    "        if(i==3):\n",
-    "            break\n",
-    "        i++\n",
-    "        current_state=frontier_queue.pop()\n",
-    "        print(frontier_queue)\n",
-    "        if (current_state in visited_states):\n",
-    "            continue\n",
-    "        visited_states.append(current_state)\n",
+    "        #if(i==3000):\n",
+    "        #    break\n",
+    "        #i+=1\n",
+    "        #print(len(frontier_queue))\n",
+    "        current_state=frontier_queue.pop(0)\n",
+    "        #if (current_state in visited_states):\n",
+    "        #    continue\n",
     "        for player in range(len(current_state[\"ploc\"])):\n",
     "            for action in ACTIONS:\n",
     "                new_state=move(current_state,player,action)\n",
-    "                if(new_state==0 or (new_state in visited_states)):\n",
+    "                if(new_state==0):\n",
     "                    continue\n",
-    "                new_state[\"order\"]=current_state[\"order\"]+\" \"+str(player)+\"(\"+str(action[0])+\" \"+str(action[1])+\")\"\n",
+    "                new_state.pop(\"order\",None)  \n",
+    "                if((new_state in visited_states)):\n",
+    "                    continue\n",
+    "                #print(\"\\n!!\",visited_states,\"!!\\n\")\n",
+    "                #print(\"*\",new_state)\n",
+    "                visited_states.append(cp.deepcopy(new_state))\n",
+    "                new_state[\"order\"]=current_state[\"order\"]+\" \"+str(player)+ACT_DICT[action]\n",
     "                if(is_goal_state(new_state)):\n",
     "                    return new_state[\"order\"]\n",
     "                frontier_queue.append(new_state) \n",
@@ -296,18 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "692d74c9",
+   "execution_count": 99,
+   "id": "02f8de91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_234506/3385197384.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBFS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tests/test3.in\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_234506/1687327343.py\u001b[0m in \u001b[0;36mBFS\u001b[0;34m(file_address)\u001b[0m\n\u001b[1;32m     20\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m                 \u001b[0mnew_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"order\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                 \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_state\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvisited_states\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m                 \u001b[0;31m#print(\"\\n!!\",visited_states,\"!!\\n\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "print(BFS(\"Tests/test1.in\"))"
+    "print(BFS(\"Tests/test3.in\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a165a28c",
+   "id": "68c496d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -315,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4709bce8",
+   "id": "16fd80a3",
    "metadata": {},
    "outputs": [],
    "source": []
