--- a/AI_CA1.ipynb
+++ b/AI_CA1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eb25ce8",
+   "id": "d1ff03b3",
    "metadata": {},
    "source": [
     "In this project, the aim is to solve a predefined problem using various search algorithms and compare their qualities. BFS, IDS and A* are the algorithms used for this problem."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5d0878",
+   "id": "e2238735",
    "metadata": {},
    "source": [
     "## Problem Description"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5d0df7",
+   "id": "5f8b84cd",
    "metadata": {},
    "source": [
     "TBA"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dddb706",
+   "id": "95f2cec4",
    "metadata": {},
    "source": [
     "## Modeling"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f2a0c66",
+   "id": "d58be7f9",
    "metadata": {},
    "source": [
     "At first, the problem should be modeled as a graph so that the search algorithms can be applied to it in future steps. Each node representes one ditinct state of the map. Bellow, the components of the model is explained:\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd650ab3",
+   "id": "39afd0a0",
    "metadata": {},
    "source": [
     "### Model Implementation"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "443fb19e",
+   "id": "23c0c18b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a67168",
+   "id": "f16430b4",
    "metadata": {},
    "source": [
     " - <b>Initiat State:</b>"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ae0600fe",
+   "id": "ad634ae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bbfa27",
+   "id": "a9c915aa",
    "metadata": {},
    "source": [
     " - <b>Actions:</b>"
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "2ad1ff73",
+   "execution_count": 3,
+   "id": "f00eafab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83309560",
+   "id": "812605f2",
    "metadata": {},
    "source": [
     " - <b>Transition Model:</b>"
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "abd2db32",
+   "execution_count": 4,
+   "id": "0ade879b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65845ba1",
+   "id": "1b958cd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b445ffca",
+   "execution_count": 6,
+   "id": "2365f6bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'row': 4, 'col': 4, 'potion_count': 1, 'ploc': [(1, 3), (0, 0)], (2, 0): 'M', (1, 2): 'O'}\n"
+      "{'row': 4, 'col': 4, 'potion_count': 1, 'ploc': [(1, 3), (3, 0)], (2, 0): 'M', (1, 2): 'O'}\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd69140f",
+   "id": "db2979ac",
    "metadata": {},
    "source": [
     "# BFS"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1988be04",
+   "id": "a613857d",
    "metadata": {},
    "source": [
     "Explainations TBA"
@@ -240,37 +240,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "d8ddf52a",
+   "execution_count": 142,
+   "id": "2f715ee7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def encode(state):\n",
+    "    encoded={}\n",
+    "    for player in range(len(state[\"ploc\"])):\n",
+    "        encoded[player]=state[\"ploc\"][player]\n",
+    "    encoded[\"potion_count\"]=state[\"potion_count\"]\n",
+    "    return tuple(encoded.items())\n",
+    "\n",
     "def BFS(file_address):\n",
     "    i=0;\n",
     "    frontier_queue=[]\n",
-    "    visited_states=[]\n",
+    "    visited_states={}\n",
     "    frontier_queue.append(read_initial_state(file_address))\n",
-    "    visited_states.append(cp.deepcopy(frontier_queue[0]))\n",
+    "    visited_states[encode(frontier_queue[0])]=True\n",
     "    frontier_queue[0][\"order\"]=\"\"\n",
     "    while(frontier_queue):\n",
-    "        #if(i==3000):\n",
-    "        #    break\n",
-    "        #i+=1\n",
-    "        #print(len(frontier_queue))\n",
     "        current_state=frontier_queue.pop(0)\n",
-    "        #if (current_state in visited_states):\n",
-    "        #    continue\n",
     "        for player in range(len(current_state[\"ploc\"])):\n",
     "            for action in ACTIONS:\n",
     "                new_state=move(current_state,player,action)\n",
     "                if(new_state==0):\n",
     "                    continue\n",
-    "                new_state.pop(\"order\",None)  \n",
-    "                if((new_state in visited_states)):\n",
+    "                if((encode(new_state) in visited_states)):\n",
     "                    continue\n",
-    "                #print(\"\\n!!\",visited_states,\"!!\\n\")\n",
-    "                #print(\"*\",new_state)\n",
-    "                visited_states.append(cp.deepcopy(new_state))\n",
+    "                visited_states[encode(new_state)]=True\n",
     "                new_state[\"order\"]=current_state[\"order\"]+\" \"+str(player)+ACT_DICT[action]\n",
     "                if(is_goal_state(new_state)):\n",
     "                    return new_state[\"order\"]\n",
@@ -280,20 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "02f8de91",
+   "execution_count": 143,
+   "id": "b3a92f55",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_234506/3385197384.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBFS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tests/test3.in\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_234506/1687327343.py\u001b[0m in \u001b[0;36mBFS\u001b[0;34m(file_address)\u001b[0m\n\u001b[1;32m     20\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m                 \u001b[0mnew_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"order\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                 \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_state\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvisited_states\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m                 \u001b[0;31m#print(\"\\n!!\",visited_states,\"!!\\n\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0U 0U 0R 0R 0D 0R 0R 0R 0U 0U 0U 0U 1R 1R 1R 1D 1U 1R 1R\n"
      ]
     }
    ],
@@ -302,20 +295,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "846d2ef5",
+   "metadata": {},
+   "source": [
+    "# IDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1ddf11b",
+   "metadata": {},
+   "source": [
+    "TBA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68c496d5",
+   "execution_count": 140,
+   "id": "427d6eb1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def DFS(initial_state,max_level):\n",
+    "    i=0;\n",
+    "    frontier_queue=[]\n",
+    "    visited_states={}\n",
+    "    frontier_queue.append([0,initial_state])\n",
+    "    #visited_states[encode(frontier_queue[0])]=1\n",
+    "    initial_state[\"order\"]=\"\"\n",
+    "    while(frontier_queue):\n",
+    "        added_level,current_state=frontier_queue.pop()\n",
+    "        if((encode(current_state) in visited_states)):\n",
+    "            if(visited_states[encode(current_state)]<=added_level):\n",
+    "                continue\n",
+    "        visited_states[encode(current_state)]=added_level\n",
+    "        for player in range(len(current_state[\"ploc\"])):\n",
+    "            for action in ACTIONS:\n",
+    "                new_state=move(current_state,player,action)\n",
+    "                if(new_state==0):\n",
+    "                    continue\n",
+    "                new_state[\"order\"]=current_state[\"order\"]+\" \"+str(player)+ACT_DICT[action]\n",
+    "                if(is_goal_state(new_state)):\n",
+    "                    return new_state[\"order\"]\n",
+    "                if(added_level+1<max_level):\n",
+    "                    frontier_queue.append([added_level+1,new_state]) \n",
+    "    return 0\n",
+    "def IDS(file_address):\n",
+    "    level=1\n",
+    "    start_state=read_initial_state(file_address)\n",
+    "    start_state[\"order\"]=\"\"\n",
+    "    res=DFS(start_state,level)\n",
+    "    while res==0:\n",
+    "        #print(level)\n",
+    "        level+=1\n",
+    "        res=DFS(start_state,level)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "58f3d457",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0R 1D 1R 1R 1R 0R 1U 0R 0U 0U 0U\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(IDS(\"Tests/test1.in\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3781e5d",
+   "metadata": {},
+   "source": [
+    "# A*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db63672e",
+   "metadata": {},
+   "source": [
+    "TBA"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16fd80a3",
+   "id": "6aaba8c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heuristic(state){\n",
+    "    player_steps=0\n",
+    "    min_row=state[\"row\"]-1\n",
+    "    min_col=state[\"col\"]-1\n",
+    "    col=min_col\n",
+    "    row=min_row\n",
+    "    for loc in state[\"ploc\"]:\n",
+    "        player_steps=row-loc[0]+col-loc[1]\n",
+    "    for key,val in state.items():\n",
+    "        if (type(key)==tuple):\n",
+    "            \n",
+    "}"
+   ]
   }
  ],
  "metadata": {
