--- a/AI_CA1.ipynb
+++ b/AI_CA1.ipynb
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb2b1d2",
+   "id": "951b40a7",
    "metadata": {},
    "source": [
     "## Tests"
@@ -686,7 +686,7 @@
     "\n",
     "Now we prove that this heuristic is consistent:\n",
     "take A=current state and C=future state, we know that cost(A to C) is 1.\n",
-    "we prove consistency for action sets {Down,Left} and {Up,Right} seprately. notice that since both $h_{distance}(n)$ is distance based and $h_{potion}(n) $ is the sum of one horizontal and one vertical distance and they cannot change simultaneously after one step, if no pill is taken, they increase or decrase by 1 after each action.\n",
+    "we prove consistency for action sets {Down,Left} and {Up,Right} seprately. notice that since both $h_{distance}(n)$ is distance based and $h_{potion}(n) $ is the sum of one horizontal and one vertical distance and they cannot change simultaneously after one step, if no pill is taken, they increase or decrase by at most 1 after each action.\n",
     " - **UP or Right:**\n",
     "  - **Pill is taken:**\n",
     "      $$h_{potion}(A)-h_{potion}(C)\\leq Positive(player(A)_{min y}-potion_{min y})\\leq n-1$$\n",
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f8ceaf4",
+   "id": "1021cd42",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0798b92",
+   "id": "08205320",
    "metadata": {},
    "source": [
     "## Tests"
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e73dbff1",
+   "id": "c3f1a409",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67625c2a",
+   "id": "c8480db9",
    "metadata": {},
    "source": [
     "## Overall Results\n",
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9da94c",
+   "id": "036ad902",
    "metadata": {},
    "source": [
     "# Weighted A*"
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47e0445",
+   "id": "12de7c89",
    "metadata": {},
    "source": [
     "We may want to loose optimality to gain more speed. Weighted A* algorithm can be used to do that. It is faster than A* but will not always return the optimal solution. it uses $\\alpha\\times h(n)$ ($\\alpha>1$) instead of $h(n)$ as heuristic, so we may loose consistancy and optimal solution with some $\\alpha$"
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf07b1a9",
+   "id": "91f61d9a",
    "metadata": {},
    "source": [
     "## $\\alpha$ = 1.3"
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2bcb4627",
+   "id": "7b7dad8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2a5a9ce9",
+   "id": "fd54748a",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "860b4fba",
+   "id": "53b047c5",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c2e6b9ba",
+   "id": "47cf8fe3",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "008a6065",
+   "id": "b855856b",
    "metadata": {},
    "source": [
     "## Overall Results\n",
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b2a224",
+   "id": "a67f8ed3",
    "metadata": {},
    "source": [
     "## $\\alpha$ = 5"
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "aa18376f",
+   "id": "e30ec434",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bda6088d",
+   "id": "639d12d3",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "36edc7cc",
+   "id": "7962b174",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b420afce",
+   "id": "233217d1",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be765520",
+   "id": "2bcc1479",
    "metadata": {},
    "source": [
     "## Overall Results\n",
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c474937f",
+   "id": "28a22a6c",
    "metadata": {},
    "source": [
     "# Conclusion"
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3099ec8f",
+   "id": "afd3626b",
    "metadata": {},
    "source": [
     "In general, the algorithm we choose to use depends highly on our situation, BFS is faster than IDS but needs more space. IDS, while it is slower than BFS, uses less space so it is suitable when we have a very limited memory. A star can be faster than BFS and IDS if a good heuristic is choosen, however, finding a good heuristic can be challenging and A star also requires more space than IDS. With Weighted A star , we loose the optimality but get the result way faster than normal A star."
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edda7eb5",
+   "id": "046eb531",
    "metadata": {},
    "source": [
     "Here are the overall results for each test:"
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35963c9b",
+   "id": "3da1abdc",
    "metadata": {},
    "source": [
     "## - Test1\n",
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3448336",
+   "id": "0a391264",
    "metadata": {},
    "source": [
     "|**Method**|**Avg Time**|**Path Depth**|**States Visited**|\n",
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3ade39",
+   "id": "7b22cbf1",
    "metadata": {},
    "source": [
     "## - Test2\n",
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413d3742",
+   "id": "768609a0",
    "metadata": {},
    "source": [
     "|**Method**|**Avg Time**|**Path Depth**|**States Visited**|\n",
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d656b8",
+   "id": "22753404",
    "metadata": {},
    "source": [
     "## - Test3\n",
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6e0f078",
+   "id": "b06f7303",
    "metadata": {},
    "source": [
     "|**Method**|**Avg Time**|**Path Depth**|**States Visited**|\n",
